--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "giphy-js-sdk-core": "^1.0.6",
     "react": "^16.6.3",
     "react-dom": "^16.6.3"
   }
