Swapped Infinite Loader with React Virtualizer

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
     "lodash": "^4.17.11",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-infinite-scroller": "^1.2.2"
+    "react-virtualized": "^9.21.0"
   }
 }
